--- a/unit10/U10.md
+++ b/unit10/U10.md
@@ -1,114 +1,75 @@
-\# Unit 10 – Research Writing and Proposal Presentation
+# Unit 10 – Research Writing and Proposal Presentation
 
+## 1. Overview
+This unit consolidated the essential skills of **research writing and reporting**, transforming analytical findings, methodological frameworks, and statistical outcomes into a structured academic proposal.  
+As Saunders, Lewis and Thornhill (2023) emphasise, research writing connects *knowledge creation* with *knowledge communication*, ensuring that technical work is accessible, logical, and critically reasoned.
 
+Building upon the earlier stages of this module—ethics, methodology, and data analysis—I prepared and submitted two key artefacts:  
+1. The **Research Proposal Presentation**, titled *A CyBOK-Based Framework for Managing Cloud Security Risks in Higher Education Institutions*.  
+2. The **Statistical Worksheet Submission**, which presented the quantitative analyses developed in Units 7–9.
 
-\## 1. Overview
-
-This unit consolidated the core components of academic \*\*research writing\*\* — transforming analytical findings, methodological planning, and statistical interpretation into a coherent, publishable format.  
-
-As Saunders, Lewis, and Thornhill (2023) emphasise, effective research writing bridges the gap between knowledge creation and communication. It requires clarity, structure, and critical synthesis to present ideas that are both academically rigorous and professionally relevant.
-
-
-
-By this stage, I integrated all prior learning — ethics, methodology, data collection, and statistical analysis — into a structured \*\*Research Proposal Presentation\*\* and accompanying \*\*Statistical Worksheet\*\* submission. Together, these artefacts demonstrate readiness for dissertation-level research and professional dissemination.
-
-
+Together, these submissions demonstrate readiness for dissertation-level research and professional publication.
 
 ---
 
+## 2. Research Proposal Presentation
 
+The presentation served as the culmination of my methodological and analytical journey. It articulated a structured approach to mitigating **cloud-security risks within higher education**, combining CyBOK-aligned theoretical grounding with practical research design.  
 
-\## 2. Research Proposal Presentation
+**Key proposal components included:**
+- **Research Problem:** Universities’ growing reliance on cloud platforms (Azure, AWS, Google Cloud) and the related surge in ransomware and compliance risks.  
+- **Aim and Objectives:** To identify, classify, and mitigate cloud-security risks while aligning with CyBOK, NIST SP 800-53, and ISO 27017 frameworks.  
+- **Methodology:** A **mixed-methods** design integrating surveys (quantitative) and interviews (qualitative) to achieve triangulated insights.  
+- **Ethical Governance:** GDPR, UAE Data Law, and BCS/ACM Codes were embedded throughout to ensure participant protection and lawful data handling.  
+- **Expected Outcomes:** Development of a practical, resource-efficient risk-management framework tailored to universities’ constraints.  
 
-The \*\*Research Proposal Presentation\*\* marked a key milestone, combining theoretical and practical insights into a single cohesive proposal.  
+The proposal emphasised *pragmatism*—balancing theoretical rigour with real-world feasibility—and outlined a 16-week research timeline covering design, data collection, and analysis phases.  
+Tutor feedback highlighted strong structure, clarity, and professionalism, recommending only minor enhancements in data-triangulation detail and visual-design coherence.
 
-My presentation focused on the topic:
-
-
-
-> \*\*“Evaluating Cloud Security Risks in Higher Education Institutions: A Mixed-Methods Approach.”\*\*
-
-
-
-The proposal included:
-
-\- \*\*Introduction \& Rationale:\*\* Justification for investigating cloud security within higher education, referencing ENISA (2023) and EDUCAUSE (2024).
-
-\- \*\*Research Aim \& Objectives:\*\* To identify, classify, and mitigate cloud-related risks across governance, compliance, and operational domains.
-
-\- \*\*Methodology:\*\* Mixed-methods design integrating qualitative interviews with IT administrators and quantitative incident data analysis.
-
-\- \*\*Ethical Considerations:\*\* Adherence to BCS and ACM Codes, GDPR, and UAE Data Protection Law.
-
-\- \*\*Expected Outcomes:\*\* Development of a practical framework aligning academic cloud governance with ISO 27001 principles.
-
-
-
-Feedback acknowledged the strong structure, logical flow, and professional delivery, recommending refinement in the literature integration and inclusion of clearer data triangulation methods.
-
-
+**Submitted Artefact:**  
+📊 *A CyBOK-Based Framework for Managing Cloud Security Risks in Higher Education Institutions* ([PowerPoint Presentation](unit10/A%20CyBOK-Based%20Framework%20for%20Managing%20Cloud%20Security%20Risks%20in%20Higher%20Education%20Institutions.pptx)):contentReference[oaicite:0]{index=0}.
 
 ---
 
+## 3. e-Portfolio Activity – Statistical Worksheet Submission
 
+To complement the proposal, I submitted **Statistical Worksheets** for formative review, consolidating analytical work from Units 7–9.  
+This exercise demonstrated competency in applying quantitative methods to cybersecurity research, specifically in the context of **cloud-risk analysis**.
 
-\## 3. e-Portfolio Activity – Statistical Worksheet Submission
+**Key techniques applied:**
+- **Descriptive statistics:** summarising incident-data distributions and governance-maturity scores.  
+- **Inferential statistics:** using *t-tests* and *correlation* to identify relationships between institutional preparedness and breach frequency.  
+- **Data visualisation:** using Excel/SPSS to create ethical, reproducible graphs for inclusion in the dissertation report.  
 
-The \*\*Statistical Worksheet\*\* exercise enhanced my quantitative analysis proficiency, linking inferential statistics to practical cybersecurity contexts.  
+The worksheets reinforced my understanding of **data validity**, **reliability**, and **reproducibility**, and ensured adherence to ISO 31000 risk-management and ISO 27001 data-governance standards.
 
-Using Excel and SPSS, I practised:
+**Submitted Files:**
+- `Unit7_Inferential_Statistics_and_Hypothesis_Testing.pdf`  
+- `Unit8_Data_Analysis_and_Visualisation.pdf`  
+- `Unit9_Validity_and_Generalisability.pdf`
 
-\- \*\*Descriptive Statistics:\*\* Summarising data distributions from simulated cloud incident datasets.  
-
-\- \*\*Inferential Analysis:\*\* Applying \*t-tests\* and \*correlation coefficients\* to validate relationships between risk variables and governance maturity.  
-
-\- \*\*Data Visualisation:\*\* Producing interpretable charts and pivot tables for inclusion in research documentation.
-
-
-
-This activity reinforced the importance of \*\*data integrity\*\*, \*\*validity\*\*, and \*\*reproducibility\*\*—core standards in cybersecurity research. These skills directly support future dissertation-level data analysis and align with ISO 31000’s risk-modelling practices.
-
-
-
----
-
-
-
-\## 4. Reflection
-
-Unit 10 represented a synthesis of research capability, integrating communication, analysis, and methodology into a professional academic product.  
-
-Developing and delivering the proposal presentation honed my ability to translate technical cybersecurity insights into accessible, research-driven narratives.  
-
-
-
-I recognised that writing is not simply documentation but an analytical process that clarifies thought, strengthens argumentation, and demonstrates scholarly maturity.  
-
-By submitting both the proposal and statistical worksheets, I demonstrated readiness for the transition from \*\*proposal design\*\* to \*\*independent research execution\*\*.
-
-
+These analyses received positive formative feedback for clarity, correct statistical interpretation, and effective integration with my mixed-methods design.
 
 ---
 
+## 4. Reflection
+Unit 10 represented the synthesis of technical expertise, methodological coherence, and academic communication.  
+Developing the proposal presentation strengthened my ability to articulate cybersecurity challenges in structured academic language, while the statistical analysis validated my ability to translate quantitative findings into actionable insight.
 
+This stage also reaffirmed the importance of **ethical precision**, **transparent reporting**, and **scholarly communication**—critical elements for both my dissertation and my professional research practice at MBZUH.
 
-\## 5. References
-
-\- ENISA. (2023) \*Threat Landscape Report – Education Sector.\*  
-
-\- EDUCAUSE. (2024) \*Securing the Digital Campus: Cloud Adoption in Higher Education.\*  
-
-\- Saunders, M., Lewis, P. and Thornhill, A. (2023) \*Research Methods for Business Students\* (9th edn). Pearson Education.  
-
-\- British Standards Institution (2022) \*BS EN ISO/IEC 27001: Information Security Management Systems – Requirements.\*  
-
-
+By completing this unit, I achieved a cohesive bridge between **proposal design** and **independent empirical research**, demonstrating readiness for the MSc dissertation stage.
 
 ---
 
+## 5. References
+- Alharthi, A., Alassafi, M., Walters, R. and Wills, G. (2022) ‘An overview of cloud-services adoption challenges in higher education institutions’, *Future Internet*, 14(7), p. 206. https://doi.org/10.3390/fi14070206  
+- British Standards Institution (2022) *BS EN ISO/IEC 27001: Information Security Management Systems – Requirements.*  
+- CyBOK (2021) *The Cyber Security Body of Knowledge.* University of Bristol. https://www.cybok.org  
+- EDUCAUSE (2023) *Top IT Issues 2023: Security and Cloud Risks in Higher Education.* https://www.educause.edu  
+- ENISA (2023) *Cloud Security Threat Landscape 2023.* European Union Agency for Cybersecurity.  
+- Saunders, M., Lewis, P. and Thornhill, A. (2023) *Research Methods for Business Students* (9th edn). Pearson Education.  
 
+---
 
-\*End of Unit 10 Evidence\*
-
-
-
+*End of Unit 10 Evidence*
