--- a/unit09/u9.md
+++ b/unit09/u9.md
@@ -1,190 +1,94 @@
-\# Unit 9 – Validity and Generalisability in Research
+# Unit 9 – Validity and Generalisability in Research
 
-
-
-\## 1. Overview
-
-This unit examined the core concepts of \*\*validity\*\*, \*\*reliability\*\*, and \*\*generalisability\*\* — three interdependent dimensions that determine the credibility of research findings.  
-
+## 1. Overview
+This unit examined the core concepts of **validity**, **reliability**, and **generalisability** — three interdependent dimensions that determine the credibility of research findings.  
 As Saunders, Lewis, and Thornhill (2023) explain, reliability ensures consistency in measurement, validity confirms that the study measures what it intends to measure, and generalisability reflects whether the findings can be applied beyond the sampled context.
-
-
 
 In cybersecurity research, these principles are vital for ensuring that analytical outcomes — such as breach statistics or user-behaviour patterns — can be trusted and meaningfully extended to other institutional settings.
 
+---
 
+## 2. Learning Focus
+- Introduce **validity**, **reliability**, and **generalisability** in quantitative and qualitative contexts.  
+- Apply statistical testing to evaluate relationships and effect sizes.  
+- Assess sampling frames and population coverage to ensure external validity.  
+- Strengthen research transparency and replicability through sound analytical design.
 
 ---
 
+## 3. Charts Worksheet – Results and Interpretation
+The **Unit 9 Charts Worksheet** applied inferential techniques to evaluate dataset validity and generalisability using three datasets: *Heather.xlsx*, *Superplus.xlsx*, and *Brandprefs.xlsx*.
 
-
-\## 2. Learning Focus
-
-\- Introduce \*\*validity\*\*, \*\*reliability\*\*, and \*\*generalisability\*\* in quantitative and qualitative contexts.  
-
-\- Apply statistical testing to evaluate relationships and effect sizes.  
-
-\- Assess sampling frames and population coverage to ensure external validity.  
-
-\- Strengthen research transparency and replicability through sound analytical design.
-
-
-
----
-
-
-
-\## 3. Charts Worksheet – Results and Interpretation
-
-The \*\*Unit 9 Charts Worksheet\*\* applied inferential techniques to evaluate dataset validity and generalisability using three datasets: \*Heather.xlsx\*, \*Superplus.xlsx\*, and \*Brandprefs.xlsx\*.
-
-
-
-\### 3.1 Exercise 9.1D – \*Heather (Location × Prevalence)\*
-
+### 3.1 Exercise 9.1D – *Heather (Location × Prevalence)*
 | | Location A | Location B |
-
 |---|---|---|
-
 | Sparse | 22 | 14 |
-
 | Abundant | 26 | 10 |
 
-
-
-\- \*\*χ² = 0.562\*\*, \*\*df = 1\*\*, \*\*p = 0.45325\*\*  
-
-\- \*\*Decision (α = 0.05):\*\* Fail to reject H₀.  
-
-&nbsp; No statistically significant association between location and prevalence.  
-
-&nbsp; \*\*Validity note:\*\* Differences may reflect random sampling error; replicating with a larger sample would increase power.
-
-
+- **χ² = 0.562**, **df = 1**, **p = 0.45325**  
+- **Decision (α = 0.05):** Fail to reject H₀.  
+  No statistically significant association between location and prevalence.  
+  **Validity note:** Differences may reflect random sampling error; replicating with a larger sample would increase power.
 
 ---
 
-
-
-\### 3.2 Exercise 9.2D – \*Superplus (Sex × Income)\*
-
+### 3.2 Exercise 9.2D – *Superplus (Sex × Income)*
 | Sex | n | Mean | Median | SD |
-
 |------|---|-------|--------|------|
-
 | Female | 60 | 44.23 | 38.15 | 13.79 |
-
 | Male | 60 | 52.91 | 52.05 | 15.27 |
 
-
-
-\- \*\*t = 3.268\*\*, \*\*p = 0.00142\*\*, \*\*Cohen’s d = 0.597\*\* (medium–large)  
-
-\- \*\*Decision (α = 0.05):\*\* Reject H₀.  
-
-&nbsp; Mean income differs significantly between sexes.  
-
-&nbsp; \*\*Generalisability note:\*\* Balanced sampling suggests findings extend to similar populations, but contextual factors (industry, region) should be considered.
-
-
+- **t = 3.268**, **p = 0.00142**, **Cohen’s d = 0.597** (medium–large)  
+- **Decision (α = 0.05):** Reject H₀.  
+  Mean income differs significantly between sexes.  
+  **Generalisability note:** Balanced sampling suggests findings extend to similar populations, but contextual factors (industry, region) should be considered.
 
 ---
 
-
-
-\### 3.3 Exercise 9.3B – \*Brandprefs (Area × Brand)\*
-
+### 3.3 Exercise 9.3B – *Brandprefs (Area × Brand)*
 | Area | Brand A | Brand B | Other |
-
 |-------|----------|----------|--------|
-
 | 1 | 11 | 17 | 42 |
-
 | 2 | 19 | 30 | 41 |
 
-
-
-\- \*\*χ² = 3.293\*\*, \*\*df = 2\*\*, \*\*p = 0.19276\*\*  
-
-\- \*\*Decision (α = 0.05):\*\* Fail to reject H₀.  
-
-&nbsp; No significant difference in brand preference by area.  
-
-&nbsp; \*\*Validity/generalisation note:\*\* Sampling frames must capture all relevant areas to avoid coverage bias.
-
-
+- **χ² = 3.293**, **df = 2**, **p = 0.19276**  
+- **Decision (α = 0.05):** Fail to reject H₀.  
+  No significant difference in brand preference by area.  
+  **Validity/generalisation note:** Sampling frames must capture all relevant areas to avoid coverage bias.
 
 ---
 
-
-
-\## 4. Data Visualisation with Power BI
-
-A complementary activity, \*\*“Practicing Business Visualisation with Power BI,”\*\* introduced practical dashboard-design principles aligned with Microsoft Power Platform analytics standards.  
-
+## 4. Data Visualisation with Power BI
+A complementary activity, **“Practicing Business Visualisation with Power BI,”** introduced practical dashboard-design principles aligned with Microsoft Power Platform analytics standards.  
 This session emphasised:
+- Structuring analytical reports using consistent layout and navigation.  
+- Selecting visual types (bar, line, KPI, card, slicer) aligned with the data story.  
+- Applying filters and slicers responsibly to prevent misinterpretation.  
+- Designing accessible and interactive dashboards to improve data transparency.
 
-\- Structuring analytical reports using consistent layout and navigation.  
-
-\- Selecting visual types (bar, line, KPI, card, slicer) aligned with the data story.  
-
-\- Applying filters and slicers responsibly to prevent misinterpretation.  
-
-\- Designing accessible and interactive dashboards to improve data transparency.
-
-
-
-\*\*Application:\*\*  
-
-I replicated one exercise using sample incident data from my cybersecurity context, creating a Power BI dashboard displaying \*incident count by source\*, \*mean response time\*, and \*risk severity trends\*.  
-
-This experience illustrated how \*\*data validity and visual integrity\*\* are intertwined — poor filtering or misleading scaling can distort conclusions, just as invalid sampling can in statistical research.
-
-
+**Application:**  
+I replicated one exercise using sample incident data from my cybersecurity context, creating a Power BI dashboard displaying *incident count by source*, *mean response time*, and *risk severity trends*.  
+This experience illustrated how **data validity and visual integrity** are intertwined — poor filtering or misleading scaling can distort conclusions, just as invalid sampling can in statistical research.
 
 ---
 
-
-
-\## 5. Reflection – Validity \& Generalisability
-
-The worksheet and Power BI tasks reinforced that \*\*significant findings strengthen internal validity\*\*, while \*\*sampling design and replication underpin external validity\*\*.  
-
+## 5. Reflection – Validity & Generalisability
+The worksheet and Power BI tasks reinforced that **significant findings strengthen internal validity**, while **sampling design and replication underpin external validity**.  
 For instance, the Superplus dataset’s significant income gap demonstrates measurable generalisability, whereas non-significant results in Heather and Brandprefs require cautious interpretation.  
 
-
-
 The Power BI dashboard exercise highlighted that ethical visualisation practices — avoiding bias, exaggeration, or omission — are extensions of research validity principles.  
-
-This parallel is especially relevant in cybersecurity analytics, where dashboards drive operational decisions and must maintain \*\*data accuracy, clarity, and reproducibility\*\*.
-
-
+This parallel is especially relevant in cybersecurity analytics, where dashboards drive operational decisions and must maintain **data accuracy, clarity, and reproducibility**.
 
 ---
 
-
-
-\## 6. Evidence
-
-\- 📄 \[Unit 9 – Validity and Generalisability (Worksheet PDF)](unit07\_08\_09/Unit9\_Validity\_and\_Generalisabi....pdf)  
-
-\- 📊 Power BI Exercise: \*Practicing Business Visualisation with Power BI\* (University of Essex Online Learning Path)
-
-
+## 6. Evidence
+- 📄 [Unit 9 – Validity and Generalisability (Worksheet PDF)](unit07_08_09/Unit9_Validity_and_Generalisabi....pdf)  
+- 📊 Power BI Exercise: *Practicing Business Visualisation with Power BI* (University of Essex Online Learning Path)
 
 ---
 
-
-
-\## 7. References
-
-\- Business Research Methodology (BRM). (2021) \*Qualitative Data Analysis.\*  
-
-\- Microsoft. (2023) \*Design Effective Reports in Power BI.\*  
-
-\- Purdue University. (2023) \*Basic Inferential Statistics: Theory and Application.\*  
-
-\- Saunders, M., Lewis, P. and Thornhill, A. (2023) \*Research Methods for Business Students\* (9th edn). Pearson Education.  
-
-
-
+## 7. References
+- Business Research Methodology (BRM). (2021) *Qualitative Data Analysis.*  
+- Microsoft. (2023) *Design Effective Reports in Power BI.*  
+- Purdue University. (2023) *Basic Inferential Statistics: Theory and Application.*  
+- Saunders, M., Lewis, P. and Thornhill, A. (2023) *Research Methods for Business Students* (9th edn). Pearson Education.  
